Object pool and transformInto methods added